# GenericSerializer

./: CMakeLists.txt
main/: CMakeLists.txt
main/inc/: definitions.hh  deserializer.hh  reinterpreter_cast_helpers.hh  serializer_helpers.hh  vectorSerializer.h
main/src/: deserializer.cpp  main.cxx
